--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-a, a:hover {text-decoration:none; color:#646464;}
+a, a:hover {text-decoration:none; color:#5a5a5a;}
 a:hover {text-decoration:underline;}
 
 header {height:50px; background-color:#FFFF96;}
@@ -22,4 +22,9 @@ header {height:50px; background-color:#FFFF96;}
 }
 .sign-up-subject {margin:20px; font-weight:bold;}
 
-#loginIdCheckBtn{background-color:#84FB84;}
+.profile {display:flex;}
+.profile-box {margin:auto; text-align:center;}
+.profile-span {font-size:22px; font-weight:bold; margin-bottom:15px;}
+
+#loginIdCheckBtn, #nicknameCheckBtn {background-color:#4BAF4B; color:white;}
+#signUpBtn {background-color:#0078FF; color:white;}
